# jk-handoff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
claude/: handoff.md
codex/handoff/: SKILL.md
codex/handoff/agents/: openai.yaml
core/handoff_cli/: __init__.py  __main__.py  atomicio.py  cli.py  current.py  detail.py  guard.py  messages.py  repo.py  status.py  topics.py
tests/: helpers.py  test_01_save_chain.py  test_02_identity.py  test_03_concurrency.py  test_04_security.py  test_05_provenance.py  test_06_aggregation.py  test_07_atomic.py  test_08_crosshost.py  test_09_status_compat.py  test_10_global_failure.py  test_11_adapters.py  test_12_review.py  test_13_reindex.py  test_14_enrichment.py  test_15_resume_prompt.py  test_16_output_encoding.py  test_17_absorb.py  test_18_lang_tz.py  test_19_section_key_normalization.py
